--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "gulp server",
     "build": "gulp clean && gulp sass && gulp copy && webpack",
     "prepublish": "babel ./src --out-dir ./lib && gulp dist",
-    "postinstall": "npm run build",
+    "postinstall": "npm install && npm run build",
     "test": "npm run lint && jest",
     "test:watch": "jest --watch",
     "lint": "eslint src",
